# smart_socket

docs/eagle/: CHIP SHIELD.sch  R41Z.lbr  SMART SOCKET.sch  eagle.epf  smart_socket.lbr
iot_edge_modules/: Dockerfile.base  Dockerfile.coap  Dockerfile.gateway  README.txt
iot_edge_modules/azure-iot-sdk-c/c-utility/: .gitignore  thirdpartynotice.txt
iot_edge_modules/azure-iot-sdk-c/doc/: SDK_cross_compile_example.md
iot_edge_modules/azure-iot-sdk-c/uamqp/: .gitignore
iot_edge_modules/azure-iot-sdk-c/umqtt/: .gitignore  CMakeLists.txt
iot_edge_modules/gateway/: CMakeLists.txt  address_resolver.c  address_resolver.h  coap_server.c  coap_server.h  config.h  gateway.c  module_log.h  standard_output_log.c  start_gateway.sh
iot_edge_modules/libcoap/win32/: libcoap.sln  libcoap.vcxproj  libcoap.vcxproj.filters
smart_socket/: LICENSE  README.txt  makefile
smart_socket/Release/: makefile  smart_socket.map  smart_socket_Release.ld  smart_socket_Release_library.ld  smart_socket_Release_memory.ld  sources.mk
smart_socket/Release/CMSIS/: subdir.mk
smart_socket/Release/drivers/: subdir.mk
smart_socket/Release/frdmkw41z/: subdir.mk
smart_socket/Release/freertos/: subdir.mk
smart_socket/Release/parson/: subdir.mk
smart_socket/Release/source/: subdir.mk
smart_socket/Release/startup/: subdir.mk
smart_socket/Release/utilities/: subdir.mk
smart_socket/source/: button_abstraction.h  coap_abstraction.h  led_abstraction.h  main.c  openthread-config-generic.h  rtc_abstraction.h  smart_socket_platform.h  thread_abstraction.h
(+122 files in other folders)
